feat: add sorting option
